--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   ],
   "require": {
     "php": ">=7.1",
-    "illuminate/http": ">=5.7"
+    "illuminate/http": ">=5.7",
+    "illuminate/database": ">=5.7"
   },
   "autoload": {
     "psr-4": {
