--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "illuminate/http": ">=5.7",
-    "illuminate/database": ">=5.7"
+    "php": ">=7.2",
+    "illuminate/http": "5.6.*",
+    "illuminate/database": "5.6.*"
   },
   "autoload": {
     "psr-4": {
