--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/http": "5.6.*",
-    "illuminate/database": "5.6.*"
+    "illuminate/http": "5.6.*,5.7.*",
+    "illuminate/database": "5.6.,5.7.**"
   },
   "autoload": {
     "psr-4": {
