--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=7.2",
     "illuminate/http": "5.6.*|5.7.*",
-    "illuminate/database": "5.6.|5.7.**"
+    "illuminate/database": "5.6.*|5.7.*"
   },
   "autoload": {
     "psr-4": {
