--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
       "name": "Betalabs Tecnologia LTDA.",
       "email": "betalabs@betalabs.com.br"
     }
-  ],
+  ],  
   "require": {
     "php": ">=7.2",
     "illuminate/http": "5.6.*|5.7.*",
-    "illuminate/database": "5.6.*|5.7.*"
+    "illuminate/database": "5.6.*|5.7.*",
+    "spatie/laravel-fractal": "^5.4"
   },
   "autoload": {
     "psr-4": {
