--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": ">=7.2",
     "illuminate/http": "5.6.*|5.7.*",
     "illuminate/database": "5.6.*|5.7.*",
-    "spatie/laravel-fractal": "^5.4"
+    "spatie/laravel-fractal": "^5.4",
+    "betalabs/engine-contracts": "0.1"
   },
   "autoload": {
     "psr-4": {
