--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,9 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/http": "5.6.*|5.7.*",
-    "illuminate/database": "5.6.*|5.7.*",
-    "spatie/laravel-fractal": "^5.4",
-    "betalabs/engine-contracts": "0.1"
+    "laravel/framework": "5.7.*",
+    "league/fractal": "^0.17.0",
+    "betalabs/engine-contracts": "0.2"
   },
   "autoload": {
     "psr-4": {
