--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=7.2",
     "laravel/framework": "5.7.*",
     "league/fractal": "^0.17.0",
-    "betalabs/engine-contracts": "dev-master"
+    "betalabs/engine-contracts": "0.3"
   },
   "autoload": {
     "psr-4": {
