--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": ">=7.2",
-    "laravel/framework": "5.7.*|5.8.*|^6.0",
+    "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0",
     "league/fractal": "^0.17.0",
     "betalabs/engine-contracts": "^1.1"
   },
