--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=7.2",
     "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0",
     "league/fractal": "^0.17.0",
-    "betalabs/engine-contracts": "^1.1"
+    "betalabs/engine-contracts": "^1.1|^2.0"
   },
   "autoload": {
     "psr-4": {
