--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "laravel/framework": "5.7.*|5.8.*|^6.0|^7.0|^8.0|^9.0",
+    "php": ">=7.4",
+    "laravel/framework": "^7.0|^8.0|^9.0",
     "league/fractal": "^0.17.0",
     "betalabs/engine-contracts": "^1.1|^2.0"
   },
